--- a/404.html
+++ b/404.html
@@ -72,7 +72,7 @@
       "⌛ 网络正在帮你打包快递…",
       "🐢 有点慢，但乌龟也能到终点！",
       "🎵 等待的时候，不妨哼一首歌～",
-      "🤖 正在努力唤醒图片…",
+      "🤖 GitHub 正在努力唤醒图片…",
       "🌌 放松一下眼睛，眺望一下远方吧。"
     ];
 
