--- a/404.html
+++ b/404.html
@@ -5,117 +5,260 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>请稍等，图片正在加载</title>
-  <style>
-    body {
-      margin: 0;
-      background: linear-gradient(135deg, #0f172a, #1e293b);
-      color: #f8fafc;
-      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      overflow: hidden;
-    }
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    h1 {
-      font-size: 28px;
-      margin: 10px 0;
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#38bdf8',
+            secondary: '#818cf8',
+            dark: '#0f172a',
+            darker: '#020617'
+          },
+          fontFamily: {
+            sans: ['Segoe UI', 'Roboto', 'Helvetica', 'Arial', 'sans-serif'],
+          },
+        },
+      }
     }
+  </script>
 
-    #timer {
-      font-size: 60px;
-      font-weight: bold;
-      margin: 15px 0;
-      color: #38bdf8;
-      text-shadow: 0 0 10px rgba(56, 189, 248, 0.7);
-    }
-
-    #msg {
-      font-size: 16px;
-      opacity: 0.9;
-      margin-top: 5px;
-    }
-
-    canvas {
-      margin-top: 30px;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 12px;
-    }
-
-    #musicTip {
-      margin-top: 20px;
-      font-size: 12px;
-      opacity: 0.6;
+  <style type="text/tailwindcss">
+    @layer utilities {
+      .text-shadow {
+        text-shadow: 0 0 10px rgba(56, 189, 248, 0.7);
+      }
+      .bg-gradient-custom {
+        background: linear-gradient(135deg, #0f172a, #1e293b);
+      }
+      .balloon-pop {
+        animation: pop 0.3s ease-out forwards;
+      }
+      @keyframes pop {
+        0% { transform: scale(1); opacity: 1; }
+        50% { transform: scale(1.5); opacity: 0.8; }
+        100% { transform: scale(2); opacity: 0; }
+      }
+      .float {
+        animation: float 3s ease-in-out infinite;
+      }
+      @keyframes float {
+        0%, 100% { transform: translateY(0); }
+        50% { transform: translateY(-10px); }
+      }
     }
   </style>
 </head>
 
-<body>
-  <h1>图片还在路上 🚚💨</h1>
-  <div id="timer">60</div>
-  <div id="msg">别急，一切正在准备中…</div>
-  <canvas id="c" width="400" height="200"></canvas>
-  <div id="musicTip">🎵 如果没有声音，请点击页面以启动音乐</div>
+<body
+  class="bg-gradient-custom text-white font-sans flex flex-col items-center justify-center min-h-screen overflow-hidden m-0">
+  <!-- 点击效果容器 -->
+  <div id="clickEffects" class="fixed inset-0 pointer-events-none z-50"></div>
 
-  <!-- 背景音乐，替换 src 为你自己的 mp3 链接 -->
-  <audio id="bgm" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop preload="auto"></audio>
+  <h1 class="text-[clamp(1.5rem,3vw,2.5rem)] font-bold mb-4 float">图片还在路上 🚚💨</h1>
+
+  <div id="timer" class="text-[clamp(2rem,5vw,4rem)] font-bold text-primary text-shadow my-2">60s</div>
+
+  <div id="msg" class="text-gray-300 text-[clamp(1rem,2vw,1.2rem)] mb-6">
+    别急，一切正在准备中…
+  </div>
+
+  <!-- 游戏区域 -->
+  <div class="relative w-full max-w-md">
+    <canvas id="gameCanvas"
+      class="w-full h-[250px] bg-white/5 rounded-xl shadow-lg shadow-primary/10 border border-white/10"></canvas>
+
+    <!-- 游戏信息 -->
+    <div class="flex justify-between mt-3 text-sm text-gray-300">
+      <div>得分: <span id="score" class="text-primary font-bold">0</span></div>
+      <div>气球: <span id="balloonsPopped" class="text-secondary font-bold">0</span></div>
+    </div>
+
+    <!-- 游戏说明 -->
+    <div class="mt-2 text-xs text-gray-400 text-center">
+      点击气球得分 | 黄色气球分数更高哦!
+    </div>
+  </div>
+
+  <!-- 音乐提示 -->
+  <!-- <div id="musicTip" class="mt-6 text-sm text-gray-400 flex items-center">
+    <i class="fa fa-music mr-2"></i>
+    <span>点击页面任意位置播放背景音乐</span>
+  </div> -->
+
+  <!-- 背景音乐（换成温柔钢琴曲） -->
+  <!-- <audio id="bgm" src="https://cdn.pixabay.com/audio/2025/04/04/audio_588416cc0f.mp3" loop preload="auto"></audio> -->
+
+  <!-- 音效 -->
+  <audio id="popSound" src="https://cdn.pixabay.com/audio/2022/03/10/audio_5b4d3bfb9e.mp3" preload="auto"></audio>
 
   <script>
-    // 倒计时
-    let sec = 60;
+    // 倒计时功能
+    let seconds = 60;
     const timerEl = document.getElementById('timer');
     const msgEl = document.getElementById('msg');
-    const bgm = document.getElementById('bgm');
     const messages = [
       "⌛ 网络正在帮你打包快递…",
       "🐢 有点慢，但乌龟也能到终点！",
-      "🎵 等待的时候，不妨哼一首歌～",
+      "🎵 等待的时候，不妨玩会儿小游戏～",
       "🤖 正在努力唤醒图片…",
-      "🌌 放松一下眼睛，眺望一下远方吧。"
+      "🌌 放松一下眼睛，眺望一下远方吧。",
+      "🎈 点击气球可以得分哦！",
+      "⏳ 时间过得很快的..."
     ];
 
-    function tick() {
-      timerEl.textContent = sec < 10 ? '0' + sec : sec + 's';
-      if (sec % 5 === 0) { // 每5秒换一句话
+    function updateTimer() {
+      timerEl.textContent = seconds < 10 ? `0${seconds}s` : `${seconds}s`;
+
+      if (seconds % 7 === 0) {
         msgEl.textContent = messages[Math.floor(Math.random() * messages.length)];
       }
-      if (sec > 0) {
-        sec--;
-        setTimeout(tick, 1000);
-      }
-      else {
+
+      if (seconds > 0) {
+        seconds--;
+        setTimeout(updateTimer, 1000);
+      } else {
         msgEl.textContent = "✅ 图片应该能加载了，马上刷新…";
-        setTimeout(() => { location.reload(); }, 2000); // 2秒后自动刷新
+        setTimeout(() => { location.reload(); }, 2000);
       }
     }
-    tick();
+    updateTimer();
 
-    // 动画小球
-    const canvas = document.getElementById('c');
-    const ctx = canvas.getContext('2d');
-    let x = 50, y = 50, vx = 3, vy = 2, r = 15;
-    function loop() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "#38bdf8";
-      ctx.beginPath();
-      ctx.arc(x, y, r, 0, Math.PI * 2);
-      ctx.fill();
-      x += vx; y += vy;
-      if (x < r || x > canvas.width - r) vx *= -1;
-      if (y < r || y > canvas.height - r) vy *= -1;
-      requestAnimationFrame(loop);
-    }
-    loop();
+    // 音乐控制
+    const bgm = document.getElementById('bgm');
+    const popSound = document.getElementById('popSound');
+    const musicTip = document.getElementById('musicTip');
+    let musicPlaying = false;
 
-    // 自动播放音乐（部分浏览器需要用户交互才能真正播放）
     function playMusic() {
-      bgm.play().catch(() => { /* 静默失败 */ });
-      document.removeEventListener('click', playMusic);
+      if (!musicPlaying) {
+        bgm.play().then(() => {
+          musicPlaying = true;
+          musicTip.innerHTML = '<i class="fa fa-music mr-2"></i><span>背景音乐正在播放</span>';
+          musicTip.classList.add('text-primary');
+        }).catch(() => { });
+      }
     }
-    playMusic();
-    document.addEventListener('click', playMusic);
+
+    // 点击效果
+    function createClickEffect(x, y) {
+      const effect = document.createElement('div');
+      effect.className = 'absolute rounded-full bg-primary/30 transform -translate-x-1/2 -translate-y-1/2';
+      effect.style.width = '40px';
+      effect.style.height = '40px';
+      effect.style.left = `${x}px`;
+      effect.style.top = `${y}px`;
+      effect.style.animation = 'pop 0.6s ease-out forwards';
+
+      document.getElementById('clickEffects').appendChild(effect);
+
+      setTimeout(() => effect.remove(), 600);
+    }
+
+    // 全局点击
+    document.addEventListener('click', (e) => {
+      playMusic();
+      createClickEffect(e.clientX, e.clientY);
+    });
+
+    // 气球游戏
+    const canvas = document.getElementById('gameCanvas');
+    const ctx = canvas.getContext('2d');
+    let score = 0;
+    let balloonsPopped = 0;
+    const balloons = [];
+    const colors = ['#38bdf8', '#818cf8', '#f87171', '#fbbf24', '#4ade80'];
+
+    function resizeCanvas() {
+      const { width, height } = canvas.getBoundingClientRect();
+      if (canvas.width !== width || canvas.height !== height) {
+        canvas.width = width;
+        canvas.height = height;
+      }
+    }
+    resizeCanvas();
+    window.addEventListener('resize', resizeCanvas);
+
+    class Balloon {
+      constructor() { this.reset(); }
+      reset() {
+        this.x = Math.random() * canvas.width;
+        this.y = canvas.height + 20;
+        this.radius = Math.random() * 15 + 15;
+        this.color = colors[Math.floor(Math.random() * colors.length)];
+        this.speed = Math.random() * 0.8 + 0.4;
+        this.popped = false;
+        this.points = this.color === '#fbbf24' ? 3 : 1;
+      }
+      update() {
+        if (!this.popped) {
+          this.y -= this.speed;
+          if (this.y + this.radius < 0) this.reset();
+        }
+      }
+      draw() {
+        if (!this.popped) {
+          ctx.beginPath();
+          ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+          ctx.fillStyle = this.color;
+          ctx.fill();
+          ctx.beginPath();
+          ctx.arc(this.x - this.radius * 0.3, this.y - this.radius * 0.3, this.radius * 0.2, 0, Math.PI * 2);
+          ctx.fillStyle = 'rgba(255,255,255,0.6)';
+          ctx.fill();
+          ctx.beginPath();
+          ctx.moveTo(this.x, this.y + this.radius);
+          ctx.lineTo(this.x, this.y + this.radius + 15);
+          ctx.strokeStyle = '#fff';
+          ctx.stroke();
+        }
+      }
+      checkClick(x, y) {
+        if (!this.popped) {
+          const dx = x - this.x, dy = y - this.y;
+          return dx * dx + dy * dy <= this.radius * this.radius;
+        }
+        return false;
+      }
+      pop() {
+        if (!this.popped) {
+          this.popped = true;
+          balloonsPopped++;
+          score += this.points;
+          document.getElementById('score').textContent = score;
+          document.getElementById('balloonsPopped').textContent = balloonsPopped;
+
+          // 播放气球音效（独立，不依赖背景音乐）
+          popSound.currentTime = 0;
+          popSound.play().catch(() => { });
+
+          setTimeout(() => this.reset(), 500);
+        }
+      }
+    }
+
+    function initBalloons() {
+      for (let i = 0; i < 5; i++) balloons.push(new Balloon());
+    }
+
+    function gameLoop() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      balloons.forEach(b => { b.update(); b.draw(); });
+      if (Math.random() < 0.02 && balloons.length < 8) balloons.push(new Balloon());
+      requestAnimationFrame(gameLoop);
+    }
+
+    canvas.addEventListener('click', (e) => {
+      const rect = canvas.getBoundingClientRect();
+      const x = e.clientX - rect.left, y = e.clientY - rect.top;
+      balloons.forEach(b => { if (b.checkClick(x, y)) b.pop(); });
+    });
+
+    initBalloons();
+    gameLoop();
   </script>
 </body>
 
